--- a/index.html
+++ b/index.html
@@ -161,6 +161,42 @@
                 </div>                             
             </div>
         </section>
+        <!-- Player information ends -->
+        <!-- Highlights starts -->
+        <section class="highlights">
+            <div class="highlights-left"> 
+                <div class="highlights-left-description">
+                    <h2 class="highlights-title">All Highlights Copa America 2021</h2>
+                    <p class="highlights-paragraph">You can watch all exclusive highlights here of Copa America 2021. Enjoy the 
+                        videos.
+                    </p>
+                </div>                               
+                <div class="highlights-button-link">
+                    <a class="highlights-link-description" href="https://www.youtube.com/">Watch Live <i class="fas fa-arrow-right"></i></a>                   
+                </div>              
+            </div>
+            <div class="highlights-right">
+                <img src="./images/match.png" alt="">
+            </div>
+        </section>
     </main>
+    <footer>
+        <section class="container">
+            <div class="footer-items">
+                <div class="footer-size">
+                    <div class="footer-image">
+                        <img class="footer-image" src="./images/Logo.png" alt="">
+                    </div>
+                    <div class="footer-icon">
+                        <img src="./images/Social Icons/Dribbble.png" alt="">
+                        <img src="./images/Social Icons/Instagram.png" alt="">
+                        <img src="./images/Social Icons/Twitter.png" alt="">
+                        <img src="./images/Social Icons/Youtube.png" alt="">
+                    </div>
+                    <p class="footer-paragraph">Copyright &copy; 2022 Football</p>                   
+                </div>
+            </div>
+        </section>
+    </footer>
 </body>
 </html>
