Mobile query and extra part added

--- a/index.html
+++ b/index.html
@@ -179,6 +179,48 @@
                 <img src="./images/match.png" alt="">
             </div>
         </section>
+        <section class="score-container">            
+            <h1 class="scorer-title">Top Scorers</h1>
+            <hr>
+            <div class="scorers">
+                <div class="scorer">
+                    <h4 class="scorer-name">Neymar Jr</h4>
+                    <p class="scorer-country">Brazil</p>
+                </div>
+                <div class="score">
+                    <h4 class="score-amount">5</h4>
+                </div>
+                <div class="scorer">
+                    <h4 class="scorer-name">Cristiano Ronaldo</h4>
+                    <p class="scorer-country">Portugal</p>
+                </div>
+                <div class="score">
+                    <h4 class="score-amount">4</h4>
+                </div>
+                <div class="scorer">
+                    <h4 class="scorer-name">Philip Coutinho</h4>
+                    <p class="scorer-country">Brazil</p>
+                </div>
+                <div class="score">
+                    <h4 class="score-amount">4</h4>
+                </div>
+                <div class="scorer">
+                    <h4 class="scorer-name">Lionel Messi</h4>
+                    <p class="scorer-country">Argentina</p>
+                </div>
+                <div class="score">
+                    <h4 class="score-amount">3</h4>
+                </div>
+                <div class="scorer">
+                    <h4 class="scorer-name">Angle Di Maria</h4>
+                    <p class="scorer-country">Argentina</p>
+                </div>
+                <div class="score">
+                    <h4 class="score-amount">3</h4>
+                </div>
+            </div>
+            <hr>
+        </section>
     </main>
     <footer>
         <section class="container">
