--- a/index.html
+++ b/index.html
@@ -221,6 +221,19 @@
             </div>
             <hr>
         </section>
+        <section class="info-container">
+            <div class="ticket-sell">
+                <div class="ticket-sell-description">
+                    <h2 class="ticket-title">Buy You Tickets From the Official Site.</h2>                                    
+                </div>
+                <div class="ticket-button-link">
+                    <a class="ticket-link-description" href="https://www.youtube.com/">Buy Ticket <i class="fas fa-arrow-right"></i></a>                   
+                </div>
+            </div>
+            <div class="venue">
+                    <img src="./images/_93352118_034360287-1.jpg" alt="">               
+            </div>
+        </section>
     </main>
     <footer>
         <section class="container">
