checkng venue and footer

--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
                 </div>
             </div>
             <div class="venue">
-                    <img src="./images/_93352118_034360287-1.jpg" alt="">               
+                    <img src="./images/venue.png" alt="">               
             </div>
         </section>
     </main>
